# codenames

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 6fae36685ece_create_initial_tables.py
codenames/: __init__.py  api.py  codenames.py  database.py  db.py  game.py  models.py  schema.sql  schemas.py  sql.py  sqlite.py
codenames/data/: words.csv
codenames/templates/: base.html  create_game.html  game.html
frontend/: .eslintcache  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  index.css  index.js
notebooks/: word2vec.py
tests/codenames/: conftest.py  test_api.py  test_game.py  test_sql.py  test_sqlite.py  test_sqlite_gamemanager.py  test_sqlite_gamestate.py  utils.py
