[tool.poetry]
name = "codenames"
version = "0.1.0"
description = ""
authors = ["Mike Czech <mail@mczech.de>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.5"
jupyterlab = "^2.2.9"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
altair = "^4.1.0"
umap-learn = "^0.4.6"
nb-black = "^1.0.7"
black = "^20.8b1"
jupytext = "^1.7.1"
tqdm = "^4.54.1"
ipywidgets = "^7.5.1"
flask = "^1.1.2"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
httpie = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
