[tool.poetry]
name = "codenames"
version = "0.1.0"
description = ""
authors = ["Mike Czech <mail@mczech.de>"]

[tool.poetry.dependencies]
python = ">=3.9.7,<3.11"
spacy = "3.4.1"
jupyterlab = "^2.2.9"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
altair = "^4.1.0"
umap-learn = "^0.4.6"
nb-black = "^1.0.7"
black = "^20.8b1"
jupytext = "^1.7.1"
tqdm = "^4.54.1"
ipywidgets = "^7.5.1"
flask = "^1.1.2"
pytest = "^6.2.4"
fastapi = {extras = ["all"], version = "^0.68.0"}
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"
sse-starlette = "^1.1.6"
asyncio = "^3.4.3"
jsonpickle = "^3.0.1"

[tool.poetry.dev-dependencies]
httpie = "^2.3.0"
rich = "^10.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
